force-app/main/default/objects/Lightning_Banner_Settings__mdt/Lightning_Banner_Settings__mdt.object-meta.xml
<CustomObject>
    <description>Holds config settings for the lightning banner</description>
    <label>Lightning Banner Settings</label>
    <pluralLabel>Lightning Banner Settings</pluralLabel>
</CustomObject>