force-app/main/default/objects/Lightning_Banner_Settings__mdt/fields/Account_Show_Activities_If_None__c.field-meta.xml
<CustomField>
    <fullName>Account_Show_Activities_If_None__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if we should show the open activities if there are not any activities on the account</description>
    <label>Account_Show_Activities_If_None</label>
    <type>Checkbox</type>
</CustomField>