force-app/main/default/objects/Lightning_Banner_Settings__mdt/fields/Contact_Show_Opportunities_If_Zero__c.field-meta.xml
<CustomField>
    <fullName>Contact_Show_Opportunities_If_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the open opportunities icon on the contact banner even if the count is zero</description>
    <label>Contact Show Opportunities If Zero</label>
    <type>Checkbox</type>
</CustomField>