force-app/main/default/objects/Lightning_Banner_Settings__mdt/fields/Ref_Acct_Opps_If_Zero__c.field-meta.xml
<CustomField>
    <fullName>Ref_Acct_Opps_If_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Show the open opportunities icon on the referral account banner even if the count is zero</description>
    <label>Ref Acct Opps If Zero</label>
    <type>Checkbox</type>
</CustomField>