force-app/main/default/objects/Lightning_Banner_Settings__mdt/fields/RefCltRet_Show_Cases_If_Zero__c.field-meta.xml
<CustomField>
    <fullName>RefCltRet_Show_Cases_If_Zero__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RefCltRet Show Cases If Zero</label>
    <type>Checkbox</type>
</CustomField>